Finish moving the autofs xfer entries to a separate autofs file. Update the installer and the Makefile.

--- a/assets/Makefile.am
+++ b/assets/Makefile.am
@@ -28,6 +28,7 @@ EXTRA_DIST = 50-default.conf.patch\
              docbook5.sh\
              paravel_support.pdf\
              rd.conf-sample\
+             rd.xfer.autofs\
              samba_shares.conf\
              xfce-config.tgz
 
